// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionStatus Component should render CONFIRMED properly 1`] = `
<div>
  <div
    class="transaction-status transaction-status--confirmed"
  >
    June 1
  </div>
</div>
`;

exports[`TransactionStatus Component should render PENDING properly 1`] = `
<div>
  <div
    class="transaction-status transaction-status--pending transaction-status--pending"
  >
    [pending]
  </div>
</div>
`;

exports[`TransactionStatus Component should render PENDING properly when status is APPROVED 1`] = `
<div>
  <div
    class="transaction-status transaction-status--pending transaction-status--pending"
  >
    <div
      aria-describedby="tippy-tooltip-1"
      class=""
      data-original-title="test-title"
      data-tooltipped=""
      style="display: inline;"
      tabindex="0"
    >
      [pending]
    </div>
  </div>
</div>
`;

exports[`TransactionStatus Component should render QUEUED properly 1`] = `
<div>
  <div
    class="transaction-status transaction-status--queued transaction-status--queued"
  >
    [queued]
  </div>
</div>
`;

exports[`TransactionStatus Component should render UNAPPROVED properly 1`] = `
<div>
  <div
    class="transaction-status transaction-status--unapproved transaction-status--unapproved"
  >
    [unapproved]
  </div>
</div>
`;
